--- a/src/scss/components/_listing-blog.scss
+++ b/src/scss/components/_listing-blog.scss
@@ -39,7 +39,7 @@
   display: grid;
   grid-template-columns: 0.7fr 1fr;
   gap: 24px;
-  margin-bottom: 0;
+  margin-bottom: 24px;
 }
 
 /* Colonne droite - 2 articles empilés verticalement */
