--- a/src/scss/components/_bandeau-contact.scss
+++ b/src/scss/components/_bandeau-contact.scss
@@ -98,6 +98,8 @@
   width: 100%;
   max-height: 326px;
   overflow: hidden;
+  border-top-right-radius: 12px;
+  border-bottom-right-radius: 12px;
 }
 
 .image-grid {
