--- a/src/scss/components/_hero-accueil.scss
+++ b/src/scss/components/_hero-accueil.scss
@@ -2,7 +2,7 @@
 // Hero Accueil - Composant
 // ============================================
 .hero-section-modern {
-  padding: 225px 0 95px 0;
+  padding: 226px 0 80px 0;
   position: relative;
   overflow: hidden;
   background-repeat: no-repeat;
@@ -24,7 +24,7 @@
   font-size: 72px;
   font-weight: 500;
   line-height: 1.05;
-  margin-bottom: 2rem;
+  margin-bottom: 48px;
   color: $bleu-principal;
 }
 
@@ -95,6 +95,7 @@
   background-repeat: no-repeat !important;
   height: 494px;
   background-size: cover;
+  background-position: right 0 top 0, left 0 bottom 0;
 }
 
 // ============================================
@@ -192,7 +193,7 @@
 
   .hero-description-modern {
     font-size: 14px;
-    margin-bottom: 2rem;
+    margin-bottom: 32px;
   }
 
   .hero-button-modern {
