--- a/src/scss/pages/_actualites-liste.scss
+++ b/src/scss/pages/_actualites-liste.scss
@@ -60,12 +60,14 @@ h2.actualite-hero-title a {
 .actualites-section {
   background-color: $bg;
 }
-
+.actualites-grid-item {
+  margin-bottom: 40px;
+}
 .actualites-filters {
   margin: 40px 0;
   display: flex;
   justify-content: flex-start;
-  align-items: flex-start; 
+  align-items: flex-start;
 
   @media only screen and (max-width: 991px) {
     flex-direction: column;
@@ -105,7 +107,7 @@ a.filter-btn.active {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 24px;
-  padding-bottom: 40px;
+  padding-bottom: 0;
 }
 
 .actualites-grid .blog-card-badge {
